# github-explain

./: .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  agent.py  mcp_utils.py  qa_agent.py
agent/prompts/: __init__.py  add_docstrings.py  project_analysis.py
agent/tools/: __init__.py  dummy_tool.py
repo/: Dockerfile  clone.py
