[project]
name = "github-explain"
version = "0.1.0"
description = "Explain Github codebases using Gemini AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backoff>=2.2.1",
    "docker>=7.1.0",
    "google-genai>=1.8.0",
    "mcp[cli]>=1.6.0",
    "rich>=14.0.0",
    "typing-extensions>=4.13.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "D", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
